--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     source:
       address: "0x7943fc4305d773d04c48093b99b45d46945fde3e"
       abi: FuulFactory
-      startBlock: 0
+      startBlock: 36280301
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
