Added indexed true to abi

--- a/abis/FuulProject.json
+++ b/abis/FuulProject.json
@@ -129,7 +129,7 @@
            "type":"address"
         },
         {
-           "indexed":false,
+           "indexed":true,
            "internalType":"uint256",
            "name":"amount",
            "type":"uint256"
@@ -346,7 +346,7 @@
            "type":"address"
         },
         {
-           "indexed":false,
+           "indexed":true,
            "internalType":"uint256",
            "name":"amount",
            "type":"uint256"
@@ -371,7 +371,7 @@
            "type":"address"
         },
         {
-           "indexed":false,
+           "indexed":true,
            "internalType":"uint256",
            "name":"amount",
            "type":"uint256"
