--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -72,12 +72,12 @@ templates:
         - name: FuulProject
           file: ./abis/FuulProject.json
       eventHandlers:
-        - event: FungibleBudgetDeposited(indexed address,uint256,indexed address)
+        - event: FungibleBudgetDeposited(indexed address,indexed uint256,indexed address)
           handler: handleFungibleBudgetDeposited
         - event: Attributed(indexed address,indexed uint256,address[5],uint256[5],bytes32)
           handler: handleAttributed
-        - event: FungibleBudgetRemoved(indexed address,uint256,indexed address)
+        - event: FungibleBudgetRemoved(indexed address,indexed uint256,indexed address)
           handler: handleFungibleBudgetRemoved
-        - event: Claimed(indexed address,indexed address,uint256,uint256[],uint256[])
+        - event: Claimed(indexed address,indexed address,indexed uint256,uint256[],uint256[])
           handler: handleClaimed
         
