--- a/abis/FuulProject.json
+++ b/abis/FuulProject.json
@@ -492,19 +492,47 @@
      "type":"function"
   },
   {
-     "inputs":[
-        
-     ],
-     "name":"canRemoveFunds",
-     "outputs":[
-        {
-           "internalType":"bool",
-           "name":"insideRemovalWindow",
-           "type":"bool"
-        }
-     ],
-     "stateMutability":"view",
-     "type":"function"
+    "inputs": [
+      {
+        "internalType": "bytes32",
+        "name": "proof",
+        "type": "bytes32"
+      }
+    ],
+    "name": "attributionProofs",
+    "outputs": [
+      {
+        "internalType": "bool",
+        "name": "",
+        "type": "bool"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
+        "internalType": "address",
+        "name": "account",
+        "type": "address"
+      },
+      {
+        "internalType": "address",
+        "name": "currency",
+        "type": "address"
+      }
+    ],
+    "name": "availableToClaim",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
   },
   {
      "inputs":[
