--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
-name: Build & Test
+name: Deploy
 
 on:
-  pull_request:
+  push:
     branches: [main]
 
 jobs:
@@ -15,4 +15,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run codegen && npm run build
-    - run: npm run test
+    - run: npm run deploy:hosted
