--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,4 +15,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run codegen && npm run build
+    - run: graph auth --product hosted-service ${{ secrets.GRAPH_AUTH_TOKEN }}
     - run: npm run deploy:hosted
