--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,12 @@ name: Deploy
 
 on:
   push:
-    branches: [main]
+    branches: [development]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: development
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
