adjust package json

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "codegen": "graph codegen",
     "build:mumbai": "graph build --network mumbai --network-file ./networks.json",
     "build:goerli": "graph build --network goerli --network-file ./networks.json",
-    "build:matic": "graph build --network matic --network-file ./networks.json",
-    "build:base": "graph build --network basei --network-file ./networks.json",
+    "build:polygon": "graph build --network matic --network-file ./networks.json",
+    "build:base": "graph build --network base --network-file ./networks.json",
     "build:optimism": "graph build --network optimism --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
-    "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/test",
+    "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
-    "deploy:matic": "npm run build:matic && graph deploy --product hosted-service fuul-protocol/matic",
+    "deploy:polygon": "npm run build:polygon && graph deploy --product hosted-service fuul-protocol/polygon",
     "deploy:base": "npm run build:base && graph deploy --product hosted-service fuul-protocol/base",
     "deploy:optimism": "npm run build:optimism && graph deploy --product hosted-service fuul-protocol/optimism",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
