--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: FuulFactory
-    network: mumbai
+    network: optimism
     source:
       abi: FuulFactory
-      address: "0x3AC79DdcC9f0449494dBAdD4A394d300623A4bED"
-      startBlock: 38260718
+      address: "0x457DCa0de973E01d36CEdaF7f5b4b8b66D6C0ef5"
+      startBlock: 109689567
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -55,7 +55,7 @@ dataSources:
 templates:
   - name: FuulProject
     kind: ethereum
-    network: mumbai
+    network: optimism
     source:
       abi: FuulProject
     mapping:
