--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build:polygon": "graph build --network matic --network-file ./networks.json",
     "build:base": "graph build --network base --network-file ./networks.json",
     "build:optimism": "graph build --network optimism --network-file ./networks.json",
+    "build:arbitrum": "graph build --network arbitrum --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
     "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
     "deploy:polygon": "npm run build:polygon && graph deploy --product hosted-service fuul-protocol/polygon",
     "deploy:base": "npm run build:base && graph deploy --product hosted-service fuul-protocol/base",
     "deploy:optimism": "npm run build:optimism && graph deploy --product hosted-service fuul-protocol/optimism",
+    "deploy:arbitrum": "npm run build:arbitrum && graph deploy --product hosted-service fuul-protocol/arbitrum",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
     "remove-local": "graph remove --node http://localhost:8020/ fuulfactory",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fuulfactory",
