--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: FuulFactory
-    network: mumbai
+    network: arbitrum
     source:
       abi: FuulFactory
-      address: "0x92Fc2AdF8D8D7080047ACF62EEf106923149e40F"
-      startBlock: 37300102
+      address: "0x457DCa0de973E01d36CEdaF7f5b4b8b66D6C0ef5"
+      startBlock: 141743172
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -55,7 +55,7 @@ dataSources:
 templates:
   - name: FuulProject
     kind: ethereum
-    network: mumbai
+    network: arbitrum
     source:
       abi: FuulProject
     mapping:
