--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:polygon": "graph build --network matic --network-file ./networks.json",
     "build:base": "graph build --network base --network-file ./networks.json",
     "build:optimism": "graph build --network optimism --network-file ./networks.json",
-    "build:arbitrum": "graph build --network arbitrum --network-file ./networks.json",
+    "build:arbitrum": "graph build --network arbitrum-one --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
     "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
