--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:base": "graph build --network base --network-file ./networks.json",
     "build:optimism": "graph build --network optimism --network-file ./networks.json",
     "build:arbitrum": "graph build --network arbitrum-one --network-file ./networks.json",
+    "build:bsc": "graph build --network bsc --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
     "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
@@ -16,6 +17,7 @@
     "deploy:base": "npm run build:base && graph deploy --product hosted-service fuul-protocol/base",
     "deploy:optimism": "npm run build:optimism && graph deploy --product hosted-service fuul-protocol/optimism",
     "deploy:arbitrum": "npm run build:arbitrum && graph deploy --product hosted-service fuul-protocol/arbitrum",
+    "deploy:bsc": "npm run build:bsc && graph deploy --product hosted-service fuul-protocol/bsc",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
     "remove-local": "graph remove --node http://localhost:8020/ fuulfactory",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fuulfactory",
