--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: FuulFactory
-    network: arbitrum-one
+    network: bsc
     source:
       abi: FuulFactory
       address: "0x457DCa0de973E01d36CEdaF7f5b4b8b66D6C0ef5"
-      startBlock: 177805100
+      startBlock: 36510407
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -55,7 +55,7 @@ dataSources:
 templates:
   - name: FuulProject
     kind: ethereum
-    network: arbitrum-one
+    network: bsc
     source:
       abi: FuulProject
     mapping:
