added base sepolia

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:optimism": "graph build --network optimism --network-file ./networks.json",
     "build:arbitrum": "graph build --network arbitrum-one --network-file ./networks.json",
     "build:bsc": "graph build --network bsc --network-file ./networks.json",
+    "build:base-sepolia": "graph build --network base-sepolia --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
     "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
@@ -18,6 +19,7 @@
     "deploy:optimism": "npm run build:optimism && graph deploy --product hosted-service fuul-protocol/optimism",
     "deploy:arbitrum": "npm run build:arbitrum && graph deploy --product hosted-service fuul-protocol/arbitrum",
     "deploy:bsc": "npm run build:bsc && graph deploy --product hosted-service fuul-protocol/bsc",
+    "deploy:base-sepolia": "npm run build:base-sepolia && graph deploy --studio fuul-protocol-base-sepolia",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
     "remove-local": "graph remove --node http://localhost:8020/ fuulfactory",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fuulfactory",
