--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:arbitrum": "graph build --network arbitrum-one --network-file ./networks.json",
     "build:bsc": "graph build --network bsc --network-file ./networks.json",
     "build:base-sepolia": "graph build --network base-sepolia --network-file ./networks.json",
+    "build:zksync-era": "graph build --network zksync-era --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
     "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
@@ -18,8 +19,9 @@
     "deploy:base": "npm run build:base && graph deploy --product hosted-service fuul-protocol/base",
     "deploy:optimism": "npm run build:optimism && graph deploy --product hosted-service fuul-protocol/optimism",
     "deploy:arbitrum": "npm run build:arbitrum && graph deploy --product hosted-service fuul-protocol/arbitrum",
-    "deploy:bsc": "npm run build:bsc && graph deploy --product hosted-service fuul-protocol/bsc",
+    "deploy:bsc": "npm run build:bsc && graph deploy --studio fuul-protocol-bsc",
     "deploy:base-sepolia": "npm run build:base-sepolia && graph deploy --studio fuul-protocol-base-sepolia",
+    "deploy:zksync-era": "npm run build:zksync-era && graph deploy --studio fuul-protocol-zksync-era",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
     "remove-local": "graph remove --node http://localhost:8020/ fuulfactory",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fuulfactory",
@@ -33,4 +35,3 @@
     "matchstick-as": "0.5.0"
   }
 }
-
