--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:bsc": "graph build --network bsc --network-file ./networks.json",
     "build:base-sepolia": "graph build --network base-sepolia --network-file ./networks.json",
     "build:zksync-era": "graph build --network zksync-era --network-file ./networks.json",
+    "build:mode": "graph build --network mode --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
     "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
@@ -22,6 +23,7 @@
     "deploy:bsc": "npm run build:bsc && graph deploy --studio fuul-protocol-bsc",
     "deploy:base-sepolia": "npm run build:base-sepolia && graph deploy --studio fuul-protocol-base-sepolia",
     "deploy:zksync-era": "npm run build:zksync-era && graph deploy --studio fuul-protocol-zksync-era",
+    "deploy:mode": "npm run build:mode && graph deploy --studio fuul-protocol-mode",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
     "remove-local": "graph remove --node http://localhost:8020/ fuulfactory",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fuulfactory",
