--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: FuulFactory
-    network: mode-mainnet
+    network: abstract-mainnet
     source:
       abi: FuulFactory
-      address: "0x457DCa0de973E01d36CEdaF7f5b4b8b66D6C0ef5"
-      startBlock: 15642305
+      address: "0x48955e80B47e0FC170D3BFA3e85d15960388c0EC"
+      startBlock: 7030216
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -55,7 +55,7 @@ dataSources:
 templates:
   - name: FuulProject
     kind: ethereum
-    network: mode-mainnet
+    network: abstract-mainnet
     source:
       abi: FuulProject
     mapping:
