--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:base-sepolia": "graph build --network base-sepolia --network-file ./networks.json",
     "build:zksync-era": "graph build --network zksync-era --network-file ./networks.json",
     "build:mode": "graph build --network mode-mainnet --network-file ./networks.json",
+    "build:abstract": "graph build --network abstract-mainnet --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
     "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
@@ -24,6 +25,7 @@
     "deploy:base-sepolia": "npm run build:base-sepolia && graph deploy --studio fuul-protocol-base-sepolia",
     "deploy:zksync-era": "npm run build:zksync-era && graph deploy --studio fuul-protocol-zksync-era",
     "deploy:mode": "npm run build:mode && graph deploy --studio fuul-protocol-mode",
+    "deploy:abstract": "npm run build:abstract && graph deploy abstract --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
     "remove-local": "graph remove --node http://localhost:8020/ fuulfactory",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fuulfactory",
