--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "deploy:zksync-era": "npm run build:zksync-era && graph deploy --studio fuul-protocol-zksync-era",
     "deploy:mode": "npm run build:mode && graph deploy --studio fuul-protocol-mode",
     "deploy:abstract": "npm run build:abstract && graph deploy abstract --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz",
-    "deploy:monad-testnet": "npm run build:monad-testnet && graph deploy monad-testnet --deploy-key 1eH3sXc34rcKb --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz",
+    "deploy:monad-testnet": "npm run build:monad-testnet && graph deploy monad-testnet --deploy-key --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
     "remove-local": "graph remove --node http://localhost:8020/ fuulfactory",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fuulfactory",
