--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:mode": "graph build --network mode-mainnet --network-file ./networks.json",
     "build:abstract": "graph build --network abstract-mainnet --network-file ./networks.json",
     "build:monad-testnet": "graph build --network monad-testnet --network-file ./networks.json",
+    "build:hyperevm": "graph build --network hyperevm --network-file ./networks.json",
     "graph:auth": "graph auth --product hosted-service",
     "deploy:mumbai": "npm run build:mumbai && graph deploy --product hosted-service fuul-protocol/mumbai",
     "deploy:goerli": "npm run build:goerli && graph deploy --product hosted-service fuul-protocol/goerli",
@@ -28,6 +29,7 @@
     "deploy:mode": "npm run build:mode && graph deploy --studio fuul-protocol-mode",
     "deploy:abstract": "npm run build:abstract && graph deploy abstract --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz",
     "deploy:monad-testnet": "npm run build:monad-testnet && graph deploy monad-testnet --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz",
+    "deploy:hyperevm": "npm run build:hyperevm && goldsky subgraph deploy fuul-factory-hyperevm/1.0.0 --path .",
     "create-local": "graph create --node http://localhost:8020/ fuulfactory",
     "remove-local": "graph remove --node http://localhost:8020/ fuulfactory",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fuulfactory",
